--- a/angular.json
+++ b/angular.json
@@ -7,6 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
+          "changeDetection": "OnPush",
+          "prefix": "app",
           "inlineTemplate": false,
           "inlineStyle": false,
           "style": "scss"
@@ -33,7 +35,7 @@
               "src/assets/i18n"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/material-custom.scss",
               "src/styles.scss"
             ],
             "scripts": []
