--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "15.0.4",
     "@angular/router": "15.0.4",
     "@fortawesome/angular-fontawesome": "^0.12.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "bootstrap": "^5.2.3",
     "rxjs": "7.5.0",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
