--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
     "rxjs": "7.5.0",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
